# ChangeLog for dev-perl/DateManip
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateManip/ChangeLog,v 1.74 2011/06/14 14:06:52 mattst88 Exp $

  14 Jun 2011; Matt Turner <mattst88@gentoo.org> DateManip-6.240.0.ebuild:
  Added ~mips, bug 341969

*DateManip-6.240.0 (14 Jun 2011)

  14 Jun 2011; Torsten Veller <tove@gentoo.org> +DateManip-6.240.0.ebuild:
  Version bump

*DateManip-6.230.0 (16 Apr 2011)

  16 Apr 2011; Torsten Veller <tove@gentoo.org> +DateManip-6.230.0.ebuild:
  Version bump

*DateManip-6.220.0 (08 Mar 2011)

  08 Mar 2011; Torsten Veller <tove@gentoo.org> +DateManip-6.220.0.ebuild:
  Version bump

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -DateManip-5.44.ebuild,
  -DateManip-6.14.ebuild:
  Cleanup

*DateManip-6.210 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +DateManip-6.210.ebuild:
  Version bump

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> DateManip-5.56.ebuild:
  ppc64 stable wrt #341865

  23 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> DateManip-6.14.ebuild:
  Rekeyword ~ppc64 wrt #341969

  21 Oct 2010; Jeroen Roovers <jer@gentoo.org> DateManip-6.14.ebuild:
  Marked ~ppc (bug #341969).

  21 Oct 2010; Jeroen Roovers <jer@gentoo.org> DateManip-6.14.ebuild:
  Marked ~hppa (bug #341969).

  21 Oct 2010; Torsten Veller <tove@gentoo.org> DateManip-6.14.ebuild:
  Add ~alpha/~arm/~ia64/~s390/~sh/~sparc wrt #341969

  21 Oct 2010; Torsten Veller <tove@gentoo.org> DateManip-6.14.ebuild:
  Drop ~alpha ~arm ~ia64 ~m68k ~s390 ~sh ~sparc

  21 Oct 2010; Torsten Veller <tove@gentoo.org> -DateManip-6.11.ebuild,
  -DateManip-6.12.ebuild, -DateManip-6.13.ebuild:
  Cleanup

*DateManip-6.14 (21 Oct 2010)

  21 Oct 2010; Torsten Veller <tove@gentoo.org> +DateManip-6.14.ebuild:
  Version bump

*DateManip-6.13 (15 Oct 2010)

  15 Oct 2010; Torsten Veller <tove@gentoo.org> +DateManip-6.13.ebuild:
  Version bump

*DateManip-6.12 (28 Sep 2010)
