@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Test-Inter
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Inter/ChangeLog,v 1.11 2011/07/06 13:04:14 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Inter/ChangeLog,v 1.12 2011/07/07 23:30:24 aballier Exp $
+
+  07 Jul 2011; Alexis Ballier <aballier@gentoo.org> Test-Inter-1.30.0.ebuild:
+  keyword ~x86-fbsd, bug #341969
 
 *Test-Inter-1.30.0 (06 Jul 2011)
 
