@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/YAML-Syck
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/ChangeLog,v 1.34 2011/06/14 13:47:45 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/ChangeLog,v 1.35 2011/07/07 23:30:03 aballier Exp $
+
+  07 Jul 2011; Alexis Ballier <aballier@gentoo.org> YAML-Syck-1.17.ebuild:
+  keyword ~x86-fbsd, bug #341969
 
   14 Jun 2011; Matt Turner <mattst88@gentoo.org> YAML-Syck-1.17.ebuild:
   Added ~mips, bug 341969
