@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DateManip
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateManip/ChangeLog,v 1.74 2011/06/14 14:06:52 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateManip/ChangeLog,v 1.75 2011/07/07 23:31:20 aballier Exp $
+
+  07 Jul 2011; Alexis Ballier <aballier@gentoo.org> DateManip-6.240.0.ebuild:
+  keyword ~x86-fbsd, bug #341969
 
   14 Jun 2011; Matt Turner <mattst88@gentoo.org> DateManip-6.240.0.ebuild:
   Added ~mips, bug 341969
